Embeddings lifecycle + alias normalization
Gateway:
- Normalize X vs X:latest in /admin/models and unload
- Remove running-only append to avoid duplicates
- Harden unload for embeddings and aliases; verify via /api/ps
- Delete endpoint resolves aliases and treats not-found as success

UI:
- deleteModel uses provider alias and refreshes immediately
- Minor UX log improvements

This reduces duplicate entries, improves unload/delete reliability, and prepares consistent handling for embedding models.

--- a/abs-ai-hub/hub-ui/assets/index.html
+++ b/abs-ai-hub/hub-ui/assets/index.html
@@ -3312,14 +3312,16 @@
             
             try {
                 addModelLog('info', 'MODEL', `Deleting model: ${modelName}`);
-                const response = await fetch(`http://localhost:8081/admin/models/${encodeURIComponent(modelName)}`, {
+                // Prefer provider alias if available in the DOM data (stored on the card as data-alias)
+                const elId = 'pull-status-' + modelName.replace(/[^a-zA-Z0-9]/g, '');
+                const alias = (document.getElementById(elId)?.dataset?.alias) || modelName;
+                const response = await fetch(`http://localhost:8081/admin/models/${encodeURIComponent(alias)}`, {
                     method: 'DELETE'
                 });
                 if (response.ok) {
                     addModelLog('info', 'MODEL', `Model ${modelName} deleted successfully`);
-                    setTimeout(() => {
-                        refreshModels();
-                    }, 2000);
+                    // Refresh immediately to reflect removal
+                    await refreshModels();
                 } else {
                     addModelLog('error', 'MODEL', `Failed to delete model ${modelName}: ${response.status}`);
                 }
