Add Onyx Suite app (full Onyx deployment)
- apps/onyx-suite/docker-compose.yml (exposes 8150 to avoid port conflicts)
- apps/onyx-suite/app.manifest.json
- catalog: register app asset pointing to http://localhost:8150

User can start with: docker compose -f abs-ai-hub/apps/onyx-suite/docker-compose.yml up -d

--- a/abs-ai-hub/hub-ui/assets/index.html
+++ b/abs-ai-hub/hub-ui/assets/index.html
@@ -3320,7 +3320,7 @@
                 });
                 if (response.ok) {
                     addModelLog('info', 'MODEL', `Model ${modelName} deleted successfully`);
-                    // Refresh immediately to reflect removal
+                    // Refresh immediately to reflect removalX
                     await refreshModels();
                 } else {
                     addModelLog('error', 'MODEL', `Failed to delete model ${modelName}: ${response.status}`);
