--- a/abs-ai-hub/apps/contract-reviewer-v2/static/index.html
+++ b/abs-ai-hub/apps/contract-reviewer-v2/static/index.html
@@ -486,11 +486,11 @@
                         
                         <div class="space-y-4">
                             <!-- LLM Model Selection -->
-                            <div>
+                            <div x-show="absFramework">
                                 <label class="block text-sm font-medium text-gray-700 mb-2">
                                     LLM Model (Chat & Analysis)
                                 </label>
-                                <select x-model="absFramework?.selectedModel" 
+                                <select x-model="absFramework.selectedModel" 
                                         @change="absFramework?.handleModelChange('llm', $event.target.value)"
                                         class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                                     <option value="">Select the language model for contract analysis</option>
