Enable global chat to include unanalyzed documents
- Modify global chat query to include documents with status 'uploaded' or 'analyzed'
- Prioritize analyzed documents in search results
- Add status indicators in AI prompt ( Analyzed vs  Raw Content)
- Update UI to show document status with visual indicators
- Include status, has_analysis, and confidence_score in documents_used metadata
- Only include analysis data for analyzed documents
- Support raw document content search even without analysis

This allows global chat to search across all documents in the system, not just analyzed ones, providing more comprehensive search capabilities.

--- a/abs-ai-hub/apps/contract-reviewer-v2/static/index.html
+++ b/abs-ai-hub/apps/contract-reviewer-v2/static/index.html
@@ -857,10 +857,13 @@
                                         <div class="text-xs text-gray-500 flex items-center">
                                             <i class="fas fa-file-alt mr-1"></i>
                                             <span x-text="doc.filename"></span>
-                                            <span x-show="doc.has_content" class="ml-1 text-green-600" title="Has content">
+                                            <span x-show="doc.status === 'analyzed'" class="ml-1 text-green-600" title="Analyzed">
                                                 <i class="fas fa-check-circle"></i>
                                             </span>
-                                            <span x-show="doc.has_analysis" class="ml-1 text-blue-600" title="Has analysis">
+                                            <span x-show="doc.status === 'uploaded'" class="ml-1 text-yellow-600" title="Raw content only">
+                                                <i class="fas fa-upload"></i>
+                                            </span>
+                                            <span x-show="doc.has_analysis" class="ml-1 text-blue-600" title="Has AI analysis">
                                                 <i class="fas fa-brain"></i>
                                             </span>
                                         </div>
