Enable single document chat for unanalyzed documents
- Update single document chat to work with documents that haven't been analyzed yet
- Modify chat prompt to handle both analyzed and unanalyzed documents:
  - For analyzed docs: Use both document content and analysis data
  - For unanalyzed docs: Use only document content with direct analysis instructions
- Update UI messages to reflect that chat works for any document, not just analyzed ones
- Remove requirement for analysis before chat functionality
- Maintain backward compatibility with existing analyzed documents

This allows users to ask questions about any uploaded document immediately,
providing instant insights even before formal analysis is completed.

--- a/abs-ai-hub/apps/contract-reviewer-v2/static/index.html
+++ b/abs-ai-hub/apps/contract-reviewer-v2/static/index.html
@@ -830,15 +830,15 @@
                 </div>
                 <div class="mt-2 text-xs text-gray-500">
                     <span x-show="!globalChatMode">Ask questions about the currently selected document</span>
-                    <span x-show="globalChatMode">Ask questions across all analyzed documents in the system</span>
+                    <span x-show="globalChatMode">Ask questions across all documents in the system</span>
                 </div>
             </div>
 
             <!-- Chat Messages -->
             <div class="flex-1 overflow-y-auto p-4 space-y-4" x-ref="chatContainer">
                 <div x-show="chatMessages.length === 0" class="text-center text-gray-500 text-sm py-4">
-                    <span x-show="!globalChatMode">Analyze a document first, then ask questions here.</span>
-                    <span x-show="globalChatMode">Ask questions across all analyzed documents in the system.</span>
+                    <span x-show="!globalChatMode">Select a document to start asking questions about it.</span>
+                    <span x-show="globalChatMode">Ask questions across all documents in the system.</span>
                 </div>
                 <template x-for="message in chatMessages" :key="message.id">
                     <div class="flex" :class="message.role === 'user' ? 'justify-end' : 'justify-start'">
