--- a/abs-ai-hub/apps/contract-reviewer-v2/static/index.html
+++ b/abs-ai-hub/apps/contract-reviewer-v2/static/index.html
@@ -36,7 +36,7 @@
     <!-- Document Review Tab -->
     <div x-show="mainTab === 'documents'" class="flex h-screen pt-16">
         <!-- Left Panel: Document Navigation -->
-        <div class="w-80 bg-white border-r border-gray-200 flex flex-col">
+        <div class="w-[420px] bg-white border-r border-gray-200 flex flex-col">
             <!-- Upload Section -->
             <div class="p-4 border-b border-gray-200">
                 <h3 class="text-lg font-semibold text-gray-900 mb-4">
@@ -134,6 +134,27 @@
                     </div>
                 </div>
                 
+                <!-- Risk Filter -->
+                <div class="mb-4 p-3 bg-gray-50 border border-gray-200 rounded-lg">
+                    <h3 class="text-sm font-semibold text-gray-700 mb-2">
+                        <i class="fas fa-filter mr-1"></i>Filter Risks
+                    </h3>
+                    <div class="flex flex-wrap gap-2">
+                        <label class="flex items-center cursor-pointer px-2 py-1 bg-white rounded border border-gray-300 hover:bg-gray-50">
+                            <input type="checkbox" x-model="riskFilters.low" class="mr-1">
+                            <span class="px-2 py-0.5 rounded text-xs bg-green-100 text-green-800 border border-green-200">Low</span>
+                        </label>
+                        <label class="flex items-center cursor-pointer px-2 py-1 bg-white rounded border border-gray-300 hover:bg-gray-50">
+                            <input type="checkbox" x-model="riskFilters.medium" class="mr-1">
+                            <span class="px-2 py-0.5 rounded text-xs bg-yellow-100 text-yellow-800 border border-yellow-200">Medium</span>
+                        </label>
+                        <label class="flex items-center cursor-pointer px-2 py-1 bg-white rounded border border-gray-300 hover:bg-gray-50">
+                            <input type="checkbox" x-model="riskFilters.high" class="mr-1">
+                            <span class="px-2 py-0.5 rounded text-xs bg-red-100 text-red-800 border border-red-200">High</span>
+                        </label>
+                    </div>
+                </div>
+                
                 <div class="space-y-2">
                     <!-- Search Results -->
                     <template x-if="searchResults.length > 0">
@@ -154,7 +175,7 @@
                                                         <span x-text="Math.round(result.score * 100)"></span>% match
                                                     </span>
                                                 </div>
-                                                <div class="text-xs text-gray-600 mb-2" x-text="result.excerpt"></div>
+                                                <p class="text-xs text-gray-600 mb-2 line-clamp-3" x-text="truncateText(result.excerpt, 200)"></p>
                                                 <div class="flex items-center space-x-3 text-xs text-gray-500">
                                                     <span class="flex items-center">
                                                         <i class="fas fa-calendar mr-1"></i>
@@ -292,27 +313,6 @@
                         <i class="fas fa-chevron-down mr-2" x-show="!isLoadingDocuments"></i>
                         <span x-text="isLoadingDocuments ? 'Loading...' : 'Load More Documents'"></span>
                     </button>
-                </div>
-            </div>
-
-            <!-- Risk Filter -->
-            <div class="p-4 border-t border-gray-200">
-                <h3 class="text-lg font-semibold text-gray-900 mb-4">
-                    <i class="fas fa-filter mr-2"></i>Risk Filter
-                </h3>
-                <div class="space-y-2">
-                    <label class="flex items-center cursor-pointer">
-                        <input type="checkbox" x-model="riskFilters.low" class="mr-2">
-                        <span class="px-2 py-1 rounded text-xs bg-green-100 text-green-800 border border-green-200">Low Risk</span>
-                    </label>
-                    <label class="flex items-center cursor-pointer">
-                        <input type="checkbox" x-model="riskFilters.medium" class="mr-2">
-                        <span class="px-2 py-1 rounded text-xs bg-yellow-100 text-yellow-800 border border-yellow-200">Medium Risk</span>
-                    </label>
-                    <label class="flex items-center cursor-pointer">
-                        <input type="checkbox" x-model="riskFilters.high" class="mr-2">
-                        <span class="px-2 py-1 rounded text-xs bg-red-100 text-red-800 border border-red-200">High Risk</span>
-                    </label>
                 </div>
             </div>
         </div>
@@ -2289,6 +2289,12 @@ Click OK to download the file, or Cancel to stay here.
                     } catch (error) {
                         return 'Invalid date';
                     }
+                },
+
+                truncateText(text, maxLength) {
+                    if (!text) return '';
+                    if (text.length <= maxLength) return text;
+                    return text.substring(0, maxLength) + '...';
                 },
 
                 getRiskClass(level) {
