--- a/abs-ai-hub/apps/contract-reviewer-v2/static/index.html
+++ b/abs-ai-hub/apps/contract-reviewer-v2/static/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <!-- Document Review Tab -->
-    <div x-show="mainTab === 'documents'" class="flex h-screen pt-16">
+    <div x-show="mainTab === 'documents'" class="flex h-screen">
         <!-- Left Panel: Document Navigation -->
         <div class="bg-white border-r border-gray-200 flex flex-col transition-all duration-300 relative"
              :class="sidebarCollapsed ? 'w-16' : 'w-[420px]'">
